24.09.25 수업내용